--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ async-trait = "0.1.60"
 clap = { version = "4.0.32", features = ["env", "cargo", "derive"] }
 dotenv = "0.15.0"
 futures-util = "0.3.25"
-serenity = { version = "0.11.5", features = ["voice_model"] }
+serenity = { version = "0.11.5", default-features = false, features = ["tokio", "parking_lot", "client", "builder", "cache", "chrono", "gateway", "model", "http", "utils", "rustls_backend"] }
 tokio = { version = "1.23.0", features = ["parking_lot", "full", "tracing"] }
 tracing = "0.1.37"
 tracing-log = "0.1.3"
