--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/ray-kast/the-q/"
 anyhow = "1.0.68"
 async-trait = "0.1.60"
 clap = { version = "4.0.32", features = ["env", "cargo", "derive"] }
+dashmap = "5.4.0"
 dotenv = "0.15.0"
 futures-util = "0.3.25"
 serenity = { version = "0.11.5", default-features = false, features = ["tokio", "parking_lot", "client", "builder", "cache", "chrono", "gateway", "model", "http", "utils", "rustls_backend", "voice_model", "voice"] }
