--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -1,5 +1,7 @@
 [package]
 name = "the-q"
+description = "Is he...y’know,"
+authors = ["raykast <me@ryan-s.net>"]
 version = "0.1.0"
 edition = "2021"
 license = "AGPL-3.0-or-later"
@@ -12,6 +14,8 @@ clap = { version = "4.0.32", features = ["env", "cargo", "derive"] }
 dashmap = "5.4.0"
 dotenv = "0.15.0"
 futures-util = "0.3.25"
+serde = { version = "1.0.152", features = ["derive"] }
+serde_json = "1.0.91"
 serenity = { version = "0.11.5", default-features = false, features = ["tokio", "parking_lot", "client", "builder", "cache", "chrono", "gateway", "model", "http", "utils", "rustls_backend", "voice_model", "voice"] }
 songbird = { version = "0.3.0", features = ["serenity"] }
 tokio = { version = "1.23.0", features = ["parking_lot", "full", "tracing"] }
