--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -20,5 +20,4 @@ serenity = { version = "0.11.5", default-features = false, features = ["tokio", 
 songbird = { version = "0.3.0", features = ["serenity"] }
 tokio = { version = "1.23.0", features = ["parking_lot", "full", "tracing"] }
 tracing = "0.1.37"
-tracing-log = "0.1.3"
-tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter"] }
+tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "tracing-log"] }
