--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -18,6 +18,7 @@ clap = { version = "4.0.32", features = ["env", "cargo", "derive"] }
 dotenv = "0.15.0"
 futures-util = "0.3.25"
 hostname = "0.3.1"
+jpeggr = { version = "=0.1.0", path = "../jpeggr" }
 notify = "5.1.0"
 once_cell = { version = "1.17.0", features = ["parking_lot"] }
 ordered-float = "3.4.0"
