--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -11,13 +11,13 @@ repository = "https://github.com/ray-kast/the-q/"
 anyhow = "1.0.68"
 async-trait = "0.1.60"
 clap = { version = "4.0.32", features = ["env", "cargo", "derive"] }
-dashmap = "5.4.0"
 dotenv = "0.15.0"
 futures-util = "0.3.25"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 serenity = { version = "0.11.5", default-features = false, features = ["tokio", "parking_lot", "client", "builder", "cache", "chrono", "gateway", "model", "http", "utils", "rustls_backend", "voice_model", "voice"] }
 songbird = { version = "0.3.0", features = ["serenity"] }
+thiserror = "1.0.38"
 tokio = { version = "1.23.0", features = ["parking_lot", "full", "tracing"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "tracing-log"] }
