--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -20,4 +20,6 @@ songbird = { version = "0.3.0", features = ["serenity"] }
 thiserror = "1.0.38"
 tokio = { version = "1.23.0", features = ["parking_lot", "full", "tracing"] }
 tracing = "0.1.37"
+tracing-loki = { version = "0.2.1", default-features = false, features = ["rustls", "compat-0-2-1"] }
 tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "tracing-log"] }
+url = "2.3.1"
