--- a/etc/loki-config.yml
+++ b/etc/loki-config.yml
@@ -18,6 +18,9 @@ ingester:
   chunk_idle_period: 5m
   chunk_retain_period: 30s
 
+querier:
+  max_concurrent: 128
+
 schema_config:
   configs:
     - from: 2020-05-15
