--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -16,7 +16,9 @@ base64k = { version = "=0.1.0", path = "../base64k" }
 clap = { version = "4.0.32", features = ["env", "cargo", "derive"] }
 dotenv = "0.15.0"
 futures-util = "0.3.25"
+ordered-float = "3.4.0"
 prost = "0.11.6"
+qcore = { version = "0.1.0", path = "../qcore" }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 serenity = { version = "0.11.5", default-features = false, features = ["tokio", "parking_lot", "client", "builder", "cache", "chrono", "gateway", "model", "http", "utils", "rustls_backend", "voice_model", "voice"] }
