--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -24,6 +24,7 @@ serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 serenity = { version = "0.11.5", default-features = false, features = ["tokio", "parking_lot", "client", "builder", "cache", "chrono", "gateway", "model", "http", "utils", "rustls_backend", "voice_model", "voice"] }
 songbird = { version = "0.3.0", features = ["serenity"] }
+strsim = "0.10.0"
 thiserror = "1.0.38"
 tokio = { version = "1.23.0", features = ["parking_lot", "full", "tracing"] }
 tracing = "0.1.37"
