--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -20,6 +20,7 @@ normalize_doc_attributes = true
 format_strings = true
 format_macro_matchers = true
 format_macro_bodies = true
+skip_macro_invocations = []
 hex_literal_case = "Lower"
 empty_item_single_line = true
 struct_lit_single_line = true
@@ -46,7 +47,7 @@ enum_discrim_align_threshold = 0
 match_arm_blocks = true
 match_arm_leading_pipes = "Never"
 force_multiline_blocks = false
-fn_args_layout = "Tall"
+fn_params_layout = "Tall"
 brace_style = "SameLineWhere"
 control_brace_style = "AlwaysSameLine"
 trailing_semicolon = true
@@ -64,7 +65,7 @@ use_field_init_shorthand = true
 force_explicit_abi = true
 condense_wildcard_suffixes = true
 color = "Auto"
-required_version = "1.5.1"
+required_version = "1.5.2"
 unstable_features = false
 disable_all_formatting = false
 skip_children = false
