--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -17,6 +17,7 @@ chrono = "0.4.23"
 clap = { version = "4.0.32", features = ["env", "cargo", "derive"] }
 dotenv = "0.15.0"
 futures-util = "0.3.25"
+notify = "5.1.0"
 ordered-float = "3.4.0"
 prost = "0.11.6"
 qcore = { version = "0.1.0", path = "../qcore" }
@@ -31,6 +32,7 @@ tracing = "0.1.37"
 tracing-loki = { version = "0.2.1", default-features = false, features = ["rustls", "compat-0-2-1"] }
 tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "tracing-log"] }
 url = "2.3.1"
+walkdir = "2.3.2"
 zstd = { version = "0.12.2", features = ["experimental"] }
 
 [build-dependencies]
