--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -18,6 +18,7 @@ clap = { version = "4.0.32", features = ["env", "cargo", "derive"] }
 dotenv = "0.15.0"
 futures-util = "0.3.25"
 notify = "5.1.0"
+once_cell = { version = "1.17.0", features = ["parking_lot"] }
 ordered-float = "3.4.0"
 prost = "0.11.6"
 qcore = { version = "0.1.0", path = "../qcore" }
