--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -17,6 +17,7 @@ chrono = "0.4.23"
 clap = { version = "4.0.32", features = ["env", "cargo", "derive"] }
 dotenv = "0.15.0"
 futures-util = "0.3.25"
+hostname = "0.3.1"
 notify = "5.1.0"
 once_cell = { version = "1.17.0", features = ["parking_lot"] }
 ordered-float = "3.4.0"
