--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -24,6 +24,7 @@ once_cell = { version = "1.17.0", features = ["parking_lot"] }
 ordered-float = "3.4.0"
 prost = "0.11.6"
 qcore = { version = "0.1.0", path = "../qcore" }
+reqwest = { version = "0.11.14", features = ["deflate", "gzip", "brotli", "rustls-tls"], default-features = false }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 serenity = { version = "0.11.5", default-features = false, features = ["tokio", "parking_lot", "client", "builder", "cache", "chrono", "gateway", "model", "http", "utils", "rustls_backend", "voice_model", "voice"] }
