--- a/crates/protock/Cargo.toml
+++ b/crates/protock/Cargo.toml
@@ -13,6 +13,7 @@ clap = { version = "4.1.1", features = ["derive", "cargo"] }
 git2 = "0.16.0"
 prost = "0.11.6"
 prost-types = "0.11.6"
+shrec = { version = "0.1.0", path = "../shrec" }
 tempfile = "3.3.0"
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["tracing-log", "fmt"] }
