--- a/crates/jpeggr/Cargo.toml
+++ b/crates/jpeggr/Cargo.toml
@@ -3,8 +3,6 @@ name = "jpeggr"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-image = { version = "0.24.5" }
+image = "0.24.5"
 thiserror = "1.0.38"
