--- a/crates/shrec/Cargo.toml
+++ b/crates/shrec/Cargo.toml
@@ -8,4 +8,6 @@ license = "AGPL-3.0-or-later"
 repository = "https://github.com/ray-kast/the-q/"
 
 [dependencies]
+hashbrown = { version = "0.13.2", features = ["raw"] }
+indexmap = "1.9.2"
 thiserror = "1.0.38"
