--- a/crates/discord-pls/Cargo.toml
+++ b/crates/discord-pls/Cargo.toml
@@ -8,13 +8,13 @@ license = "AGPL-3.0-or-later"
 repository = "https://github.com/ray-kast/the-q/"
 
 [dependencies]
-async-trait = "0.1.60"
-clap = { version = "4.0.32", features = ["env", "cargo", "derive"] }
+async-trait = "0.1.68"
+clap = { version = "4.2.1", features = ["env", "cargo", "derive"] }
 dotenv = "0.15.0"
 rand = "0.8.5"
-serde = { version = "1.0.152", features = ["derive"] }
-serde_json = "1.0.91"
-serenity = { version = "0.11.5", default-features = false, features = ["tokio", "parking_lot", "client", "builder", "cache", "chrono", "gateway", "model", "http", "utils", "rustls_backend", "voice_model", "voice"] }
-tokio = { version = "1.23.0", features = ["parking_lot", "full", "tracing"] }
+serde = { version = "1.0.159", features = ["derive"] }
+serde_json = "1.0.95"
+serenity = { workspace = true }
+tokio = { version = "1.27.0", features = ["parking_lot", "full", "tracing"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "tracing-log"] }
