--- a/crates/qmacros/Cargo.toml
+++ b/crates/qmacros/Cargo.toml
@@ -11,9 +11,7 @@ repository = "https://github.com/ray-kast/the-q/"
 proc-macro = true
 
 [dependencies]
-darling = "0.14.2"
-proc-macro2 = "1.0.50"
-proc-macro2-diagnostics = "0.9.1"
-quote = "1.0.23"
-syn = { version = "1.0.107", features = ["fold"] }
-thiserror = "1.0.38"
+proc-macro2 = "1.0.56"
+quote = "1.0.26"
+syn = { version = "2.0.13", features = ["extra-traits", "fold", "full"] }
+thiserror = "1.0.40"
