--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -11,6 +11,7 @@ struct_variant_width = 35
 array_width = 60
 chain_width = 60
 single_line_if_else_max_width = 50
+single_line_let_else_max_width = 50
 wrap_comments = false
 format_code_in_doc_comments = false
 doc_comment_code_block_width = 100
@@ -65,7 +66,7 @@ use_field_init_shorthand = true
 force_explicit_abi = true
 condense_wildcard_suffixes = true
 color = "Auto"
-required_version = "1.5.2"
+required_version = "1.6.0"
 unstable_features = false
 disable_all_formatting = false
 skip_children = false
