--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -11,23 +11,24 @@ build = "build.rs"
 
 [dependencies]
 anyhow = "1.0.72"
-async-trait = "0.1.72"
-clap = { version = "4.3.19", features = ["env", "cargo", "derive"] }
+async-trait = "0.1.72" # TODO: remove async-trait?
+clap = { version = "4.3.19", features = ["env", "cargo", "derive", "wrap_help"] }
 dotenv = "0.15.0"
 futures-util = "0.3.28"
 hostname = "0.3.1"
 jpeggr = { version = "=0.1.0", path = "../jpeggr" }
 notify = "6.0.1"
 once_cell = { version = "1.18.0", features = ["parking_lot"] }
-ordered-float = "3.7.0"
+ordered-float = "4.2.0"
 paracord = { version = "0.1.0", path = "../paracord" }
-prost = "0.11.9"
+prost = "0.12.3"
 qcore = { version = "0.1.0", path = "../qcore" }
 reqwest = { version = "0.11.18", features = ["deflate", "gzip", "brotli", "rustls-tls"], default-features = false }
 serenity = { workspace = true }
 shrec = { version = "0.1.0", path = "../shrec" }
-songbird = { version = "0.3.2", features = ["serenity"] }
-strsim = "0.10.0"
+songbird = { version = "0.4.0", features = ["serenity"] }
+strsim = "0.11.0"
+symphonia = { version = "0.5.3", features = ["all"] }
 tokio = { version = "1.29.1", features = ["parking_lot", "full", "tracing"] }
 tracing = "0.1.37"
 tracing-loki = { version = "0.2.3", default-features = false, features = ["rustls", "compat-0-2-1"] }
@@ -37,4 +38,4 @@ walkdir = "2.3.3"
 
 [build-dependencies]
 glob = "0.3.1"
-prost-build = "0.11.9"
+prost-build = "0.12.3"
