--- a/crates/discord-pls/Cargo.toml
+++ b/crates/discord-pls/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/ray-kast/the-q/"
 [dependencies]
 async-trait = "0.1.72"
 clap = { version = "4.3.19", features = ["env", "cargo", "derive"] }
-dotenv = "0.15.0"
+dotenvy = "0.15.7"
 rand = "0.8.5"
 serde = { version = "1.0.178", features = ["derive"] }
 serde_json = "1.0.104"
