--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -13,7 +13,7 @@ build = "build.rs"
 anyhow = "1.0.72"
 async-trait = "0.1.72" # TODO: remove async-trait?
 clap = { version = "4.3.19", features = ["env", "cargo", "derive", "wrap_help"] }
-dotenv = "0.15.0"
+dotenvy = "0.15.7"
 futures-util = "0.3.28"
 hostname = "0.3.1"
 jpeggr = { version = "=0.1.0", path = "../jpeggr" }
