--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -57,20 +57,21 @@ match_block_trailing_comma = true
 blank_lines_upper_bound = 1
 blank_lines_lower_bound = 0
 edition = "2021"
-version = "Two"
+style_edition = "2021"
 inline_attribute_width = 0
 format_generated_files = false
+generated_marker_line_search_limit = 5
 merge_derives = true
 use_try_shorthand = true
 use_field_init_shorthand = true
 force_explicit_abi = true
 condense_wildcard_suffixes = true
 color = "Auto"
-required_version = "1.7.0"
+required_version = "1.8.0"
 unstable_features = false
 disable_all_formatting = false
 skip_children = false
-hide_parse_errors = false
+show_parse_errors = true
 error_on_line_overflow = false
 error_on_unformatted = false
 ignore = []
