--- a/crates/shrec/Cargo.toml
+++ b/crates/shrec/Cargo.toml
@@ -8,7 +8,7 @@ license = "AGPL-3.0-or-later"
 repository = "https://github.com/ray-kast/the-q/"
 
 [dependencies]
-hashbrown = { version = "0.14.0", features = ["raw"] }
+hashbrown = { version = "0.15.0" }
 indexmap = "2.0.0"
 thiserror = "1.0.44"
 
