--- a/crates/base64k/Cargo.toml
+++ b/crates/base64k/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "base64k"
 description = "Convert binary data to Unicode code points"
-authors = ["raykast <me@ryan-s.net>"]
+authors = ["raykast <me@june-s.net>"]
 version = "0.1.0"
 edition = "2021"
 license = "AGPL-3.0-or-later"
