--- a/crates/discord-pls/Cargo.toml
+++ b/crates/discord-pls/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "discord-pls"
 description = "discord pls"
-authors = ["raykast <me@ryan-s.net>"]
+authors = ["raykast <me@june-s.net>"]
 version = "0.1.0"
 edition = "2021"
 license = "AGPL-3.0-or-later"
