--- a/crates/paracord/Cargo.toml
+++ b/crates/paracord/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "paracord"
 description = "Helper types for working with Serenity"
-authors = ["raykast <me@ryan-s.net>"]
+authors = ["raykast <me@june-s.net>"]
 version = "0.1.0"
 edition = "2021"
 license = "AGPL-3.0-or-later"
