--- a/crates/protock/Cargo.toml
+++ b/crates/protock/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "protock"
 description = "Tool to check protobuf file compatibility"
-authors = ["raykast <me@ryan-s.net>"]
+authors = ["raykast <me@june-s.net>"]
 version = "0.1.0"
 edition = "2021"
 license = "AGPL-3.0-or-later"
