--- a/crates/shrec/Cargo.toml
+++ b/crates/shrec/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "shrec"
 description = "the Simple Human-readable Regular Expression Compiler"
-authors = ["raykast <me@ryan-s.net>"]
+authors = ["raykast <me@june-s.net>"]
 version = "0.1.0"
 edition = "2021"
 license = "AGPL-3.0-or-later"
