--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "the-q"
 description = "Is he...y’know,"
-authors = ["raykast <me@ryan-s.net>"]
+authors = ["raykast <me@june-s.net>"]
 version = "0.1.0"
 edition = "2021"
 license = "AGPL-3.0-or-later"
