--- a/crates/discord-pls/Cargo.toml
+++ b/crates/discord-pls/Cargo.toml
@@ -9,12 +9,12 @@ repository = "https://github.com/ray-kast/the-q/"
 
 [dependencies]
 async-trait = "0.1.83"
-clap = { version = "4.5.23", features = ["env", "cargo", "derive"] }
+clap.workspace = true
 dotenvy = "0.15.7"
 rand = "0.8.5"
 serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.134"
-serenity = { workspace = true }
+serenity.workspace = true
 tokio = { version = "1.42.0", features = ["parking_lot", "full", "tracing"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "tracing-log"] }
