--- a/crates/paracord/Cargo.toml
+++ b/crates/paracord/Cargo.toml
@@ -17,7 +17,7 @@ prost = "0.13.4"
 qcore = { version = "0.1.0", path = "../qcore" }
 serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.134"
-serenity = { workspace = true }
+serenity.workspace = true
 strsim = "0.11.1"
 thiserror = "2.0.9"
 tokio = { version = "1.42.0", default-features = false, features = ["sync"] }
