--- a/crates/shrec/Cargo.toml
+++ b/crates/shrec/Cargo.toml
@@ -8,7 +8,8 @@ license = "AGPL-3.0-or-later"
 repository = "https://github.com/ray-kast/the-q/"
 
 [dependencies]
-hashbrown = { version = "0.15.2" }
+clap.workspace = true
+hashbrown = "0.15.2"
 indexmap = "2.7.0"
 thiserror = "2.0.9"
 
