--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -29,6 +29,7 @@ shrec = { version = "0.1.0", path = "../shrec" }
 songbird = { version = "0.4.6", features = ["serenity"] }
 strsim = "0.11.1"
 symphonia = { version = "0.5.4", features = ["all"] }
+tempfile = "3.16.0"
 tokio = { version = "1.43.0", features = ["parking_lot", "full", "tracing"] }
 tracing = "0.1.41"
 tracing-loki = { version = "0.2.6", default-features = false, features = ["rustls", "compat-0-2-1"] }
