--- a/crates/protock/Cargo.toml
+++ b/crates/protock/Cargo.toml
@@ -13,7 +13,7 @@ clap.workspace = true
 git2 = "0.20.0"
 prost = "0.13.5"
 prost-types = "0.13.5"
-shrec = { version = "0.1.0", path = "../shrec" }
+shrec.workspace = true
 tempfile = "3.16.0"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["tracing-log", "fmt"] }
