--- a/crates/qcore/Cargo.toml
+++ b/crates/qcore/Cargo.toml
@@ -8,4 +8,4 @@ license = "AGPL-3.0-or-later"
 repository = "https://github.com/ray-kast/the-q/"
 
 [dependencies]
-qmacros = { version = "0.1.0", path = "../qmacros" }
+qmacros.workspace = true
