--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -14,18 +14,19 @@ anyhow = "1.0.95"
 async-trait = "0.1.86" # TODO: remove async-trait?
 clap.workspace = true
 dotenvy = "0.15.7"
-futures-util = "0.3.31"
+futures-util.workspace = true
+hashbrown.workspace = true
 hostname = "0.4.0"
-jpeggr = { version = "=0.1.0", path = "../jpeggr" }
+jpeggr.workspace = true
 notify = "8.0.0"
 once_cell = { version = "1.20.3", features = ["parking_lot"] }
 ordered-float = "4.6.0"
-paracord = { version = "0.1.0", path = "../paracord" }
+paracord.workspace = true
 prost = "0.13.5"
-qcore = { version = "0.1.0", path = "../qcore" }
+qcore.workspace = true
 reqwest = { version = "0.12.12", features = ["deflate", "gzip", "brotli", "rustls-tls"], default-features = false }
 serenity.workspace = true
-shrec = { version = "0.1.0", path = "../shrec" }
+shrec.workspace = true
 songbird = { version = "0.4.6", features = ["serenity"] }
 strsim = "0.11.1"
 symphonia = { version = "0.5.4", features = ["all"] }
@@ -36,6 +37,10 @@ tracing-loki = { version = "0.2.6", default-features = false, features = ["rustl
 tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "tracing-log"] }
 url = "2.5.4"
 walkdir = "2.5.0"
+
+[dev-dependencies]
+proptest.workspace = true
+shrec = { workspace = true, features = ["proptest"] }
 
 [build-dependencies]
 glob = "0.3.1"
