--- a/crates/shrec/Cargo.toml
+++ b/crates/shrec/Cargo.toml
@@ -12,6 +12,7 @@ clap.workspace = true
 hashbrown.workspace = true
 indexmap = "2.7.1"
 proptest = { workspace = true, optional = true }
+spin = "0.10.0"
 thiserror = "2.0.11"
 
 [dev-dependencies]
