--- a/fuzz/shrec/Cargo.toml
+++ b/fuzz/shrec/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 [dependencies]
 afl = "0.15.19"
 arbitrary = { version = "1.4.1", features = ["derive"] }
+foldhash = "0.1.5"
 shrec = { version = "0.1.0", path = "../../crates/shrec", features = ["test"] }
 
 [features]
