Fix broken build for b64k.

--- a/crates/base64k/Cargo.toml
+++ b/crates/base64k/Cargo.toml
@@ -13,5 +13,8 @@ clap.workspace = true
 clap.optional = true
 wide = "0.8.2"
 
+[features]
+clap = ["dep:clap"]
+
 [dev-dependencies]
 proptest.workspace = true
