--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ futures-util = "0.3.31"
 hashbrown = "0.16.0"
 proptest = "1.9.0"
 
-mid-tools = { version = "0.0.0", path = "../wire-stuff/crates/mid-tools" }
+mid-tools = { version = "0.0.0", git = "https://github.com/ray-kast/compiler-stuff.git", rev = "1df7048" }
 
 base64k = { version = "=0.1.0", path = "crates/base64k" }
 jpeggr = { version = "=0.1.0", path = "crates/jpeggr" }
