--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ resolver = "2"
 futures-util = "0.3.31"
 hashbrown = "0.16.0"
 proptest = "1.9.0"
+tracing = "0.1.44"
 
 mid-tools = { version = "0.0.0", git = "https://github.com/ray-kast/compiler-stuff.git", rev = "a28f400" }
 
