--- a/crates/discord-pls/Cargo.toml
+++ b/crates/discord-pls/Cargo.toml
@@ -16,5 +16,5 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 serenity.workspace = true
 tokio = { version = "1.48.0", features = ["parking_lot", "full", "tracing"] }
-tracing = "0.1.41"
+tracing.workspace = true
 tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "tracing-log"] }
