--- a/crates/protock/Cargo.toml
+++ b/crates/protock/Cargo.toml
@@ -15,5 +15,5 @@ mid-tools.workspace = true
 prost = "0.14.1"
 prost-types = "0.14.1"
 tempfile = "3.23.0"
-tracing = "0.1.41"
+tracing.workspace = true
 tracing-subscriber = { version = "0.3.20", features = ["tracing-log", "fmt"] }
