--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,14 @@ resolver = "2"
 futures-util = "0.3.31"
 hashbrown = "0.16.0"
 proptest = "1.9.0"
+thiserror = "2.0.17"
 tracing = "0.1.44"
 
 mid-tools = { version = "0.0.0", git = "https://github.com/ray-kast/compiler-stuff.git", rev = "a28f400" }
 
 base64k = { version = "=0.1.0", path = "crates/base64k" }
 jpeggr = { version = "=0.1.0", path = "crates/jpeggr" }
+magick-sys = { version = "=0.1.0", path = "crates/magick-sys" }
 paracord = { version = "=0.1.0", path = "crates/paracord" }
 qcore = { version = "=0.1.0", path = "crates/qcore" }
 qmacros = { version = "=0.1.0", path = "crates/qmacros" }
