--- a/crates/jpeggr/Cargo.toml
+++ b/crates/jpeggr/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 image = "0.25.8"
-thiserror = "2.0.17"
+magick-sys.workspace = true
+thiserror.workspace = true
 tracing.workspace = true
