--- a/crates/paracord/Cargo.toml
+++ b/crates/paracord/Cargo.toml
@@ -20,7 +20,7 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 serenity.workspace = true
 strsim = "0.11.1"
-thiserror = "2.0.17"
+thiserror.workspace = true
 tokio = { version = "1.48.0", default-features = false, features = ["sync"] }
 tracing.workspace = true
 url = "2.5.7"
