--- a/crates/qmacros/Cargo.toml
+++ b/crates/qmacros/Cargo.toml
@@ -14,4 +14,4 @@ proc-macro = true
 proc-macro2 = "1.0.103"
 quote = "1.0.42"
 syn = { version = "2.0.109", features = ["extra-traits", "fold", "full"] }
-thiserror = "2.0.17"
+thiserror.workspace = true
