--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ mid-tools = { version = "0.0.0", git = "https://github.com/ray-kast/compiler-stu
 
 base64k = { version = "=0.1.0", path = "crates/base64k" }
 jpeggr = { version = "=0.1.0", path = "crates/jpeggr" }
-magick-sys = { version = "=0.1.0", path = "crates/magick-sys" }
+lqr-sys = { version = "=0.1.0", path = "crates/lqr-sys" }
 paracord = { version = "=0.1.0", path = "crates/paracord" }
 qcore = { version = "=0.1.0", path = "crates/qcore" }
 qmacros = { version = "=0.1.0", path = "crates/qmacros" }
