--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -16,26 +16,26 @@ clap.workspace = true
 dotenvy = "0.15.7"
 futures-util.workspace = true
 hashbrown.workspace = true
-hostname = "0.4.1"
+hostname = "0.4.2"
 jpeggr.workspace = true
 mid-tools.workspace = true
 notify = "8.2.0"
 once_cell = { version = "1.21.3", features = ["parking_lot"] }
 ordered-float = "5.1.0"
 paracord.workspace = true
-prost = "0.14.1"
+prost = "0.14.3"
 qcore.workspace = true
-reqwest = { version = "0.12.24", features = ["deflate", "gzip", "brotli", "rustls-tls"], default-features = false }
+reqwest = { version = "0.13.1", features = ["deflate", "gzip", "brotli", "zstd"] }
 serenity.workspace = true
 songbird = { version = "0.5.0", features = ["serenity"] }
 strsim = "0.11.1"
 symphonia = { version = "0.5.5", features = ["all"] }
-tempfile = "3.23.0"
-tokio = { version = "1.48.0", features = ["parking_lot", "full", "tracing"] }
+tempfile = "3.24.0"
+tokio = { version = "1.49.0", features = ["parking_lot", "full", "tracing"] }
 tracing.workspace = true
 tracing-loki = { version = "0.2.6", default-features = false, features = ["rustls", "compat-0-2-1"] }
-tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "tracing-log"] }
-url = "2.5.7"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "tracing-log"] }
+url = "2.5.8"
 walkdir = "2.5.0"
 
 [dev-dependencies]
@@ -43,4 +43,4 @@ proptest.workspace = true
 
 [build-dependencies]
 glob = "0.3.3"
-prost-build = "0.14.1"
+prost-build = "0.14.3"
