--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -37,6 +37,7 @@ tracing-loki = { version = "0.2.6", default-features = false, features = ["rustl
 tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "tracing-log"] }
 url = "2.5.8"
 walkdir = "2.5.0"
+webp = "0.3.1"
 
 [dev-dependencies]
 proptest.workspace = true
