--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -20,6 +20,7 @@ hostname = "0.4.2"
 jpeggr.workspace = true
 mid-tools.workspace = true
 notify = "8.2.0"
+num-traits = "0.2.19"
 oklab = "1.1.2"
 once_cell = { version = "1.21.3", features = ["parking_lot"] }
 ordered-float = "5.1.0"
