--- a/crates/the-q/Cargo.toml
+++ b/crates/the-q/Cargo.toml
@@ -18,6 +18,7 @@ futures-util.workspace = true
 gstreamer = "0.24.4"
 hashbrown.workspace = true
 hostname = "0.4.2"
+jiff = "0.2.18"
 jpeggr.workspace = true
 mid-tools.workspace = true
 notify = "8.2.0"
@@ -28,6 +29,7 @@ ordered-float = "5.1.0"
 paracord.workspace = true
 prost = "0.14.3"
 qcore.workspace = true
+redis = { version = "1.0.2", features = ["tokio-comp"] }
 regex = "1.12.2"
 reqwest = { version = "0.13.1", features = ["deflate", "gzip", "brotli", "zstd"] }
 serenity.workspace = true
